prevent the page from scrolling because it's too long

--- a/message/src/app/write-message/write-message.component.css
+++ b/message/src/app/write-message/write-message.component.css
@@ -1,7 +1,6 @@
 .email-form {
 	display: flex;
 	flex-flow: column;
-	height: 100%;
 }
 .email-form .message.textarea {
 	padding: 15px;
